# pytchdeck

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/pytchdeck/: __init__.py  api.py  cli.py  main.py
src/pytchdeck/clients/: langfuse.py  llm.py
src/pytchdeck/config/: __init__.py  settings.py
src/pytchdeck/dependencies/: lifespan.py  rate_limiter.py  workflow.py
src/pytchdeck/models/: __init__.py  dto.py  exceptions.py  states.py
src/pytchdeck/routes/: api.py
src/pytchdeck/routes/api/v1/: api.py  errors.py
src/pytchdeck/templates/: basic_template.html
src/pytchdeck/templates/revealjs/: compile.py  llms.txt
src/pytchdeck/utils/: utils.py
src/pytchdeck/workflows/: ingestion.py  pitch.py  pitch_workflow.py
src/pytchdeck/workflows/components/: readers.py
src/pytchdeck/workflows/nodes/: guardrails.py  readers.py
src/pytchdeck/workflows/tasks/: ingestion.py  readers.py
tests/: __init__.py  test_api.py  test_cli.py  test_import.py
